--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ config/
 .env.development.local
 .env.test.local
 .env.production.local
+.env
+serviceAccountKey.json
 
 npm-debug.log*
 yarn-debug.log*
