--- a/package.json
+++ b/package.json
@@ -12,21 +12,28 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.2",
+    "dotenv": "^16.4.5",
+    "file-saver": "^2.0.5",
     "fingerprintjs2": "^2.1.4",
     "firebase": "^10.8.1",
+    "firebase-admin": "^12.1.0",
     "framer-motion": "^11.0.8",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.6",
     "node-sass": "8.0",
+    "qrcode-generator": "^1.4.4",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
+    "react-image-crop": "^11.0.5",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-text-mask": "^5.5.0",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
